[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/both.png" type="Texture" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Roll_For_First.gd" type="Script" id=3]
[ext_resource path="res://Audio/board game question dice.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer/VBoxContainer/TextureRect:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "coin_flip"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer/VBoxContainer/TextureRect:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[node name="Roll For First" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 94.0
margin_top = 132.0
margin_right = 546.0
margin_bottom = 228.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 450.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 32.0
text = "Let's see who goes first!"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 448.0
margin_bottom = 52.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 448.0
margin_bottom = 92.0
text = "Click me!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/coin_flip = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GoAwayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="button_down" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GoAwayTimer" to="." method="_on_goAwayTimer_timeout"]
